Añadí todos los requisitos para la tercera preentrega, JSON, DOM, Local Storage y borré los prompts y alerts

--- a/index.html
+++ b/index.html
@@ -3,14 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Francisco Allende</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <script defer src="js/script.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <title>CoderFitness</title>
 </head>
 <body>
+    <header>
+        <nav>
 
-    <section class="cajita">
-    <h1>Primera Pre-Entrega - Francisco Allende 47085</h1>
-    </section>
+            <a href="" class="nav-link">CoderFitness</a>
+            <ul class="nav-list">
+                <li><a href="" class="nav-link">Inicio</a></li>
+                <li><a href="" class="nav-link">Contacto</a></li>
+            </ul>
+        </nav>
+
+    </header>
+    <main class="root">
+        <form action="" class="form-container" id="form">
+            <div class="form-container-title">
+                <h2>¿Te gustaría recibir las mejores ofertas de nuestros productos? Regístrese y elija un producto.</h2>
+            </div>
+            <div class="form-container-inputs"></div>
+        </form>
+    </main>
+    <script src="js/script.js"></script>
+
 </body>
 </html>
